# httprunner-mubu

./: .gitignore  .travis.yml  README.md  pyproject.toml
httprunner_mubu/: cli.py  loader.py  runner.py  validate.py
tests/: test_ci.py  test_runner.py  test_single_api.py  test_testcase.py
tests/api/: api_login_submit.yml  get_homepage.yml  get_login.yml
tests/testcase/: mubu_login.yml  test_ci.py  test_single_api.py
