[tool.poetry]
name = "httprunner-mubu"
version = "0.1.0"
description = ""
authors = ["xj2019033 <1102421956@qq.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jsonpath = "^0.82"

[tool.poetry.dev-dependencies]
coverage = "^4.5.4"
coveralls = "^1.8.2"

[tool.poetry.scripts]
hogrun = "httprunner_mubu.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
